--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
             </div>
           </div>
 
+          <div id="tripError" class="error" hidden></div>
+
           <div id="tripResults" class="trip-results"></div>
           
           <!-- Recent/Favorite Trips -->
@@ -99,6 +101,8 @@
               <button type="button" id="stationClearBtn">Cancella</button>
             </div>
           </div>
+
+          <div id="stationError" class="error" hidden></div>
 
           <div id="stationInfo" class="station-info-card hidden"></div>
 
