--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="format-detection" content="telephone=no,date=no,address=no,email=no">
     <meta name="color-scheme" content="light">
     <title>Treninfo</title>
     <link rel="shortcut icon" type="image/png" href="img/orario.png" />
