sistemata UI - colori e sol. viaggi

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <input
                   id="stationQuery"
                   type="search"
-                  placeholder="Firenze Santa Maria Novella, Roma Termini…"
+                  placeholder="Nome stazione (es. Roma Termini)"
                   autocomplete="off"
                 />
                 <ul id="stationList" class="autocomplete"></ul>
@@ -145,7 +145,7 @@
                   id="trainNumber"
                   type="text"
                   inputmode="numeric"
-                  placeholder="Numero treno"
+                  placeholder="Numero treno (es. 18828)"
                   autocomplete="off"
                 />
               </div>
