--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <div class="app-inner">
       <header class="app-header">
         <div class="app-title">
-          <img src="/img/bigliettonero.png" alt="" class="icon-img" />
+          <img src="/img/iconDef.png" alt="" class="icon-img" />
           <div>
-            <h1>Treninfo</h1>
+            <h1>Treninfo - versione web</h1>
             <p class="small muted">
               Dati in tempo reale sullo stato dei treni RFI.
             </p>
@@ -30,7 +30,7 @@
         <!-- CERCA VIAGGIO -->
         <section class="card card-trip-search" id="tripSearch">
           <h2 class="card-title">
-            <img src="/img/bigliettonero.png" alt="Cerca viaggio" class="icon-img" />
+            <img src="/img/valigBlack.svg" alt="Cerca viaggio" class="icon-img" />
             <span>Cerca viaggio</span>
           </h2>
 
@@ -92,7 +92,7 @@
         <!-- INFO STAZIONI non so come ma ho trovato l'API giusta-->
         <section class="card card-station-search" id="stationSearch">
           <h2 class="card-title">
-            <img src="/img/orarionero.png" alt="Seleziona stazione" class="icon-img" />
+            <img src="/img/oraBlack.svg" alt="Seleziona stazione" class="icon-img" />
             <span>Cerca stazione</span>
           </h2>
           
