--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="format-detection" content="telephone=no,date=no,address=no,email=no">
     <meta name="color-scheme" content="light">
     <title>Treninfo</title>
-    <link rel="shortcut icon" type="image/png" href="img/orario.png" />
+    <link rel="shortcut icon" type="image/png" href="img/iconDef.png" />
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
@@ -30,7 +30,6 @@
         <!-- CERCA VIAGGIO -->
         <section class="card card-trip-search" id="tripSearch">
           <h2 class="card-title">
-            <img src="/img/valigBlack.svg" alt="Cerca viaggio" class="icon-img" />
             <span>Cerca viaggio</span>
           </h2>
 
@@ -92,7 +91,6 @@
         <!-- INFO STAZIONI non so come ma ho trovato l'API giusta-->
         <section class="card card-station-search" id="stationSearch">
           <h2 class="card-title">
-            <img src="/img/oraBlack.svg" alt="Seleziona stazione" class="icon-img" />
             <span>Cerca stazione</span>
           </h2>
           
@@ -134,7 +132,6 @@
         <!-- RICERCA TRENO -->
         <section class="card card-train-search" id="trainSearch">
           <h2 class="card-title">
-            <img src="/img/alert.png" alt="" class="icon-img" />
             <span>Ricerca treno</span>
           </h2>
 
