Update project files

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Treninfo</title>
     <link rel="shortcut icon" type="image/png" href="img/iconDef.png" />
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
+    <!-- Leaflet rimosso: la mappa non è più usata -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 <body>
@@ -89,7 +89,7 @@
 
           <div id="tripResults" class="trip-results"></div>
           
-          <!-- Recent/Favorite Trips -->
+          <!-- Recent Trips -->
           <div id="tripStorage" class="storage-area hidden"></div>
         </section>
         <!-- INFO STAZIONI non so come ma ho trovato l'API giusta-->
@@ -129,7 +129,7 @@
             <div id="stationBoardList" class="station-board-list"></div>
           </div>
           
-          <!-- Recent/Favorite Stations -->
+          <!-- Recent Stations -->
           <div id="stationStorage" class="storage-area hidden"></div>
           </section>
 
@@ -160,7 +160,7 @@
           <div id="trainError" class="error"></div>
           <div id="trainResult"></div>
 
-          <!-- Recent/Favorite Trains -->
+          <!-- Recent Trains -->
           <div id="trainStorage" class="storage-area hidden"></div>
         </section>
 
@@ -181,7 +181,7 @@
       </footer>
     </div>
   </div>
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <!-- Leaflet rimosso: la mappa non è più usata -->
   <script src="script.js"></script>
 </body>
 </html>
