Fix stazioni: DB incluso in Netlify + autocomplete locale

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Treninfo Server</h1>
-  <p>Backend API (Netlify Functions) che normalizza ViaggiaTreno (RFI) + LeFrecce e restituisce JSON pronti per l'app Treninfo.</p>
+  <p>Backend API (Netlify Functions) che normalizza i dati e restituisce JSON pronti per l'app Treninfo.</p>
   <ul>
     <li><a href="/test-rfi.html">Pagina di test chiamate API</a></li>
     <li><a href="/docs/SERVER-TRENINFO.md">Guida rapida (repo)</a></li>
